[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "pydantic>=2.11.9",
  "pyyaml>=6.0.3",
  "xarray>=2025.9.1",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ".."
