[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "dagster>=1.11.13",
  "httpx>=0.28.1",
  "pydantic>=2.11.9",
  "pyyaml>=6.0.3",
  "sentry-sdk>=2.43",
  "xarray>=2025.9.1",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7",
  "pytest-recording>=0.13.4",
]

[tool.pytest.ini_options]
pythonpath = ".."
addopts = "--cov=."

[tool.coverage.run]
omit = [
  ".venv/*",
  "tests/*",
]
branch = true
